# duel-masterserver

./: CMakeLists.txt
include/: masterserver.h  protocol.h  serialize.h  stun.cpp  stun.h
source/: beacon-flare.cpp  beacon.cpp  main.cpp  test.cpp
